--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Student Portal</h5>
                         <p class="card-text">View your marks and give feedback on assessments.</p>
-                        <a href="#" class="btn btn-primary">Go to Student</a>
+                        <a href="#*" class="btn btn-primary">Go to Student</a>
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                     <div class="card-body">
                         <h5 class="card-title">HOD Portal</h5>
                         <p class="card-text">Administer faculty and student accounts, manage assessments.</p>
-                        <a href="#" class="btn btn-primary">Go to HOD</a>
+                        <a href="hod/hodlogin.php" class="btn btn-primary">Go to HOD</a>
                     </div>
                 </div>
             </div>
