update in admin

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     text-align: center;
     padding: 20px 0;
     width: 100%;
-    position: relative;
+    /* position: relative; */
     margin-top: 10px;
 }
 
